test/errors/wrong_arg_count.sl
# expect: COMPERROR
auto fn = (fixed a, bool b) -> none {};
fn(1);
